# Freshman-3rd

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  QtWebSchoolSys.pro  QtWebStudentSys.pro  README.md  Report.tex  build.ninja  chat-server  config_qrc.py  main.cpp  main.go  mainwindow.cpp  mainwindow.h  resources.qrc  stu_with_score.h  student.h  test.cpp  webbridge.cpp  webbridge.h
.cmake/api/v1/reply/: cache-v2-31a189882b300a9988f6.json  cache-v2-61c5347c4737afed0187.json  cache-v2-7eebe700e593d702abb3.json  cmakeFiles-v1-0e46a7733ccd8e644c88.json  cmakeFiles-v1-f512648aff3d5f97b4e9.json  codemodel-v2-5829176ac723a1961dc9.json  codemodel-v2-eb3174996ef7acd4ac1b.json  directory-.-b15ea2cbc8bed754f9ed.json  directory-.-b2578770fc1dd79da294.json  index-2025-06-30T17-32-34-0279.json  index-2025-07-01T13-20-38-0579.json  index-2025-07-07T08-48-19-0061.json  target-QtWebSchoolSys-fa3f8b12f3e01aff733a.json  target-QtWebSchoolSys_autogen-73325c0d9ab71191bf50.json  target-QtWebSchoolSys_autogen_timestamp_deps-c18eb5536aa2186204cd.json  target-QtWebStudentSys-45a37d4ed0cf7a9e3e4d.json  target-QtWebStudentSys_autogen-e996cc14117d7c94a9b0.json  target-QtWebStudentSys_autogen_timestamp_deps-631f87b9455c9c793029.json
.github/workflows/: workflow.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Go/: main.go
Go/package/: chat.go  gateway.go
Go/src/: chat.go  gateway.go
QtWebSchoolSys_autogen/: deps
QtWebStudentSys_autogen/: deps  mocs_compilation.cpp
gateway/: gateway.go
im/: Cargo.toml  basic.h  build.rs  chat.go  main.cpp  message.h  room.cpp  room.h  room.rs  server.cpp  server.h  user.cpp  user.h
im/cpp/: user.h
im/im_go_bridge/: im_bridge.cpp  im_bridge.h
sql_link/: json2sql.py  sql2json.py
struct/: course.h  other_users.h  stu_with_score.h  student.h
web/: admin.css  admin.html  admin.js  login.css  login.html  login.js
web/vue-proj/: index.html  package-lock.json  package.json  pnpm-lock.yaml
web/vue-proj/src/: App.vue  main.js
web/vue-proj/src/router/: index.js
web/vue-proj/src/views/: Admin.vue  Login.vue  Student.vue  Teacher.vue
